# CFL3D

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCGNS.cmake
source/: CMakeLists.txt
source/cfl3d/libs/: CMakeLists.txt  bc.F  bc1000.F  bc2036.F  bc_info.F  bspline_kinds_module.F90  bspline_module.F90  bspline_oo_module.F90  bspline_sub_module.F90  deform.F  dessla.F  ffluxr.F  ffluxv.F  fhat.F  force.F  foureqn.F  getdhdr.F  gfluxr.F  gfluxv.F  global.F  global0.F  hfluxr.F  hfluxv.F  modread.F  module_des_save.F90  module_fds_blend.F90  module_gust.F90  module_kinds.F90  module_wjet_profile.F90  pltmode.F  readdat.F  readkey.F  resid.F  setseg.F  sigma_nts.F  spalart.F  twoeqn.F
source/maggie/: CMakeLists.txt
source/precfl3d/: CMakeLists.txt  main.F
source/ronnie/: CMakeLists.txt
source/splitter/: CMakeLists.txt
source/tools/: CMakeLists.txt  cfl3dinp_to_FVBND.F
